--- a/slots/package.json
+++ b/slots/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slots",
+  "name": "slot_machine",
   "version": "1.0.0",
-  "description": "模拟老虎机",
+  "description": "老虎机",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,12 +9,18 @@
   "author": "戴锦如",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.1.3",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-header": "^1.8.9",
     "gulp-less": "^3.3.2",
-    "webpack": "^3.5.5"
-  },
-  "dependencies": {}
+    "gulp-postcss": "^7.0.0",
+    "gulp-sequence": "^0.4.6",
+    "gulp-uglify": "^3.0.0",
+    "postcss-reporter": "^0.1.0",
+    "stylelint": "^8.0.0"
+  }
 }
